samples/_failures_safe/1761179752_c2c006_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_928c9f36.c: In function ‘main’:
./samples/SAFE/__tmp_928c9f36.c:105:46: error: ‘Matrix’ has no member named ‘col’; did you mean ‘cols’?
  105 |     if (scanf("%d", &mat1.cols) != 1 || mat1.col
      |                                              ^~~
      |                                              cols
./samples/SAFE/__tmp_928c9f36.c:105:49: error: expected ‘)’ at end of input
  105 |     if (scanf("%d", &mat1.cols) != 1 || mat1.col
      |        ~                                        ^
      |                                                 )
./samples/SAFE/__tmp_928c9f36.c:105:5: error: expected declaration or statement at end of input
  105 |     if (scanf("%d", &mat1.cols) != 1 || mat1.col
      |     ^~
